[project]
name = "flettest"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.6",
  "numpy==1.26.4",
  "certifi==2025.4.26",
  "opencv-python",
  "pillow",
  "intervaltree",
  "sortedcontainers",
  "readpdfutils==1.0.5",
  "djvulib==0.1.3",
  "fastrlsa==0.0.6",
]

requires = [
    "--find-links", "/Users/ugxnbmikhs/code/python/mobile-forge/dist"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flettest"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
